src/objects/Psychometric_Test__c.object
<CustomObject>
    <fields>
        <fullName>Abilities_Attitude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abilities &amp; Attitude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Abilities_and_Aptitudes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abilities and Aptitudes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Status__c</fullName>
        <label>Assessment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Referral__c</fullName>
        <label>Client Referral</label>
        <referenceTo>Client_Referral__c</referenceTo>
        <relationshipLabel>Psychometric Tests</relationshipLabel>
        <relationshipName>Psychometric_Tests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Psychometric Tests</relationshipLabel>
        <relationshipName>Psychometric_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dyslexia_Screening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dyslexia Screening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Other_Please_Specify__c</fullName>
        <label>If Other, Please Specify</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Info_Re__c</fullName>
        <label>Info Re. Suitability for Training/Emp.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Assessment_PRI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Assessment PRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Literacy_Numeracy_Screening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Literacy &amp; Numeracy Screening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personality_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personality Assessment</label>
        <type>Checkbox</type>
    </fields>
    <label>Psychometric Test</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Client_Referral__c</columns>
        <columns>Legacy_Created_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Psychometric Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>